test/corpus/testTeo.txt
================================================================================
Minus expression
================================================================================

-23
--------------------------------------------------------------------------------

(source_file
  (mapping
    body: (unary_expression
      (value
        (numberLiteral
          (integer))))))

================================================================================
Minus expression
================================================================================

! 23
--------------------------------------------------------------------------------

(source_file
  (mapping
    body: (unary_expression
      (value
        (numberLiteral
          (integer))))))

================================================================================
teo doBlock
================================================================================

do {
    123
}

--------------------------------------------------------------------------------

(source_file
  (mapping
    (unary_expression
      (do_block
        (value
          (numberLiteral
            (integer)))))))

================================================================================
teo doBlock w header
================================================================================

do {
    fun f() = 2
    ---
    456
}

--------------------------------------------------------------------------------

(source_file
  (mapping
    (unary_expression
      (do_block
        (header
          (functionDirective
            (nameIdentifier)
            (value
              (numberLiteral
                (integer)))))
        (value
          (numberLiteral
            (integer)))))))

================================================================================
teo parent expression
================================================================================

[(123), 3]

--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (array
          (value
            (selectableValues
              (value
                (numberLiteral
                  (integer)))))
          (value
            (numberLiteral
              (integer))))))))

================================================================================
teo call
================================================================================

f(1, 2)

--------------------------------------------------------------------------------

(source_file
  (mapping
    (function_call
      (selectableValues
        (nameIdentifier))
      (value
        (numberLiteral
          (integer)))
      (value
        (numberLiteral
          (integer))))))

================================================================================
teo selectors
================================================================================

este.aquel
--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (selectors
          (basic_selector
            (selectableValues
              (nameIdentifier))
            (nameWithPrefix
              (nameIdentifier))))))))

================================================================================
teo doble selector
================================================================================

este.aquel.otro
--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (selectors
          (basic_selector
            (selectableValues
              (selectors
                (basic_selector
                  (selectableValues
                    (nameIdentifier))
                  (nameWithPrefix
                    (nameIdentifier)))))
            (nameWithPrefix
              (nameIdentifier))))))))

================================================================================
teo selector dinamico
================================================================================

este["blop"]
--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (selectors
          (basic_selector
            (selectableValues
              (nameIdentifier))
            (value
              (selectableValues
                (nonNumberliteral
                  (stringLiteral))))))))))

================================================================================
teo object
================================================================================

{n#a: 123, b: "dsa"}
--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (object
          (key
            (nameWithPrefix
              (namespace
                (nameIdentifier))
              (nameIdentifier)))
          (value
            (numberLiteral
              (integer)))
          (key
            (nameWithPrefix
              (nameIdentifier)))
          (value
            (selectableValues
              (nonNumberliteral
                (stringLiteral)))))))))

================================================================================
teo do block with var
================================================================================

var a: Number = 123
var b = a
---

do {
  var a = 456
  ---
  a
}

--------------------------------------------------------------------------------

(source_file
  (mapping
    (header
      (varDirective
        (nameIdentifier)
        (typeExpression
          (typeReferenceLiteral
            (fullyQualifiedName
              (nameIdentifier))))
        (value
          (numberLiteral
            (integer))))
      (varDirective
        (nameIdentifier)
        (value
          (selectableValues
            (nameIdentifier)))))
    (unary_expression
      (do_block
        (header
          (varDirective
            (nameIdentifier)
            (value
              (numberLiteral
                (integer)))))
        (value
          (selectableValues
            (nameIdentifier)))))))

================================================================================
teo input dir
================================================================================

input payload json

---

123

--------------------------------------------------------------------------------

(source_file
  (mapping
    (header
      (inputDirective
        (nameIdentifier)
        (writerId)))
    (value
      (numberLiteral
        (integer)))))

================================================================================
teo type dir
================================================================================

type Teo = true
type Shoki = false

---
123

--------------------------------------------------------------------------------

(source_file
  (mapping
    (header
      (typeDirective
        (nameIdentifier)
        (typeExpression
          (literalType
            (trueLiteral))))
      (typeDirective
        (nameIdentifier)
        (typeExpression
          (literalType
            (falseLiteral)))))
    (value
      (numberLiteral
        (integer)))))

================================================================================
fun with typeExpression
================================================================================

fun f(a: String, b) = 33

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (functionDirective
        (nameIdentifier)
        (function_parameter
          (nameIdentifier)
          (typeExpression
            (typeReferenceLiteral
              (fullyQualifiedName
                (nameIdentifier)))))
        (function_parameter
          (nameIdentifier))
        (value
          (numberLiteral
            (integer)))))))

================================================================================
teo match default
================================================================================

3 match {
  else -> 4
  else b -> b
}

--------------------------------------------------------------------------------

(source_file
  (mapping
    (binary_expression
      (match_expression
        (value
          (numberLiteral
            (integer)))
        (case_expression
          (default_pattern)
          (value
            (numberLiteral
              (integer))))
        (case_expression
          (default_pattern
            (nameIdentifier))
          (value
            (selectableValues
              (nameIdentifier))))))))

================================================================================
teo default
================================================================================

34 default 33 default 45
--------------------------------------------------------------------------------

(source_file
  (mapping
    (binary_expression
      (default_expression
        (binary_expression
          (default_expression
            (value
              (numberLiteral
                (integer)))
            (value
              (numberLiteral
                (integer)))))
        (value
          (numberLiteral
            (integer)))))))
